--- a/public/.htaccess
+++ b/public/.htaccess
@@ -4,10 +4,15 @@
     </IfModule>
 
     RewriteEngine On
+	RewriteBase /riego/
 
     # Redirect Trailing Slashes If Not A Folder...
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteRule ^(.*)/$ /$1 [L,R=301]
+	
+	#Autorization Headers
+	RewriteCond %{HTTP:Authorization} .
+	RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
 
     # Handle Front Controller...
     RewriteCond %{REQUEST_FILENAME} !-d
